# trabalho-pratico-2-bancos-de-dados-2023-2-ejv-ebony-jonathas-vinicius

./: .gitignore  CMakeLists.txt  README.md  findrec.cpp  seek1.cpp  seek2.cpp  upload.cpp
include/: arquivo_hash.hpp  artigo.hpp  constantes.hpp
src/: arquivo_hash.cpp  artigo.cpp
